[UTF-8][Japanese]

*Ver3.0β5 : 2015/xx/xx

-theme/ ディレクトリ以下にテーマやテンプレートに無関係なものが増えてきたので、それらを pub-dist/ に移動しました。
-【記法】目次記法の機能を拡張し、出力階層を選択できるようにしました（{{[*toc0] [*toc2]}}の追加）。
-【アルバム】【fix】大文字の拡張子（.JPG等）を画像ファイルと識別できない。
-【fix】「ブログとwikiコンテンツ等を分離して扱う」にチェックを入れるとコンテンツページが検索にヒットしない。（[http://adiary.blog.abk.nu/0358#c655:Thanks to 手石]）
-【fix】theme/以下のテンプレート読み込み機能がうまく動作していなかった。なおVer3の[bf:テンプレートディレクトリ名は _skel です]（[http://adiary.blog.abk.nu/0358#c655:Thanks to 手石]）

*Ver3.0β4 : 2015/03/05

-[bf:デザイン編集でサイドバー以外も編集できるようになりました]。
-[bf:テーマカラーリングをカスタマイズする機能を付けました]。（対応テーマのみ）
-記法の[http://adiary.org/v3man/Satsuki-detail/escape:エスケープ表記動作]を整理しました。
-記法ヘルパー機能を付けました。
-確認ダイアログをブラウザ標準の「confirm」からオリジナルに変更しました。
-JPEGのExifを記事に貼り付けられるようになりました。
-自動リロード画面でEnterを押すと強制リロードするようにしました。
-同一の記事を複数の人やタブで編集した際に確認メッセージを出す機能を付けました。[em:デフォルトでは無効になっています]（システム設定にあります）。
-記事編集画面からの画像選択画面にスクロールバーが表示されるように変更しました。
-デザイン編集画面の編集ツールの位置を変更しました。
-Twitterへの投稿通知機能をプラグイン化しました。
-faviconが設定できるようになりました。
-【アルバム】D&Dで自動アップロードする機能をつけました。
-【アルバム】CTRL+クリックで直接ダウンロードする機能をつけました。
-【アルバム】Exif除去機能を付けました。((JPEG形式のみ。画像再圧縮なしです。TIFF形式は非対応。))
-【アルバム】特殊文字「\ : * ? " ' {<} {>} | &」をファイル名等に使用できないようにしました。
-【アルバム】ゴミ箱に入れる際、入れた日時をファイル名に付加するようにしました。
-【アルバム】SHIFT+クリックによる範囲選択機能を付けました。
-【アルバム】大文字の拡張子を許可するように変更しました。
-【アルバム】【fix】ファイルを移動した際、サムネイルファイルが残り続けることがあった。
-【アルバム】【fix】ファイル名ビューの時、画像の貼り付けで挿入されるタグが正しくない。
-【Markdown】【fix】行頭以外にTABを入力した時の挙動が正しくない。
-【Markdown】【fix】リスト入れ子時の動作が正しくない。余計な{<p>}タグが出る。
-【Markdown】【fix】通常文章ブロックの途中から引用ブロック等を書くことができない。
-【Markdown】【fix】引用ブロック（{>}）の手前にスペースを書くことができない。
-【Markdown】リスト入れ子判別時、段差が1でも入れ子として認識するようにしました。((この方がより本家に近い形になります。従来の実装では4つの段差が必要でした。))
-【fix】フィルター記法を{[[&http://adiary.org]]}のように{[[ ]]}中に書けない。
-【fix】非表示input要素に対するリサイズ機能が正しく働いてなかったので、表示後、初めてmouseenterしたときにリサイズ加工をするように修正しました。
-【fix】Image::Magickが存在しないとき、アルバムの動作がエラーになっていた。
-【fix】data-target指定時にjQuery XSSの問題があった。（[http://subtech.g.hatena.ne.jp/mala/20110624/1308881526:参考]）
-【fix】管理画面で選択テーマを使用しない設定の場合、デザインの初期化の確認画面で常に標準テーマが表示されていた。