@@ -51,6 +51,9 @@
 #-------------------------------------------------------------------------------
 <$v = new>
 
+# ○Version2からの移行設定（絶対パスでも可）
+#<$v.v2conf = "../adiary2/adiary.conf.cgi">
+
 # ●記事などのタグ制限を撤廃する
 #・adiaryを個人や「完全に信頼できる人たち」のみで使用する場合は v.trust_mode=1 を設定
 #・IDを所有してない人間に対してのセキュリティは変わりません。
