@@ -173,6 +173,12 @@ file#5      = ファイル, ASCII, 4,  ${image}$3$4
 # exif
 exif#link = 画像へのリンク, ASCII, 2, ${image}$1$2
 
+# Ver1互換設定
+image       = 画像アルバム, image, 3,  ${image}$2$3
+image#small = 画像アルバム, image, 3,  ${image}$2.thumbnail/$3.jpg
+image#link  = 画像アルバム, image, 3,  ${image}$2$3
+
+
 
 #------------------------------------------------------------------------------
 # Audio/Video
