@@ -9,7 +9,7 @@ use Fcntl ();
 #-------------------------------------------------------------------------------
 our $VERSION = '2.94';
 our $OUTVERSION = '3.00';
-our $SUBVERSION = 'beta4.x';
+our $SUBVERSION = 'beta4.1';
 our $DATA_VERSION = 2.94;
 ###############################################################################
 # ■システム内部イベント
