@@ -3,9 +3,11 @@
 
 ログイン cookie 確認処理
 <$ifexec(Auth.ok, begin)>
-<$url = if( v.path_blogid, v.thisurl, v.myself3 )>
-<$ifset(Auth.auto, url, Myself2 . '?user/add')>
-<$redirect( url )>
+	<$ifredirect(Auth.auto && v.v2conf, Myself . '?system/v2conv')>
+	<$ifredirect(Auth.auto            , Myself . '?user/add')>
+
+	<$url = if( v.path_blogid, v.thisurl, v.myself3 )>
+	<$redirect( url )>
 <$end>
 
 失敗時
