@@ -8,9 +8,9 @@
  <span class="item-start">[</span>
   <@if(v.skel_name eq 'setting',     '<span class="select">システム設定</span>',     #'<a href="<@v.myself>?<@v.skel_dir>setting">システム設定</a>')>, 
   <@if(v.skel_name eq 'blog_create', '<span class="select">任意のブログ作成</span>', #'<a href="<@v.myself>?<@v.skel_dir>blog_create">任意のブログ作成</a>')>, 
-  <@if(v.skel_name eq 'update',      '<span class="select">アップデート</span>',     #'<a href="<@v.myself>_dummy?<@v.skel_dir>update">アップデート</a>')>, 
+  <@if(v.skel_name eq 'update',      '<span class="select">アップデート</span>',     #'<a href="<@v.myself>?<@v.skel_dir>update">アップデート</a>')>, 
   <@if(v.skel_name eq 'check',       '<span class="select">システムチェック</span>', #'<a href="<@v.myself>_dummy?<@v.skel_dir>check">システムチェック</a>')>, 
-  <@if(v.skel_name eq 'copyright',   '<span class="select">著作権表示</span>',       #'<a href="<@v.myself>_dummy?<@v.skel_dir>copyright">著作権表示</a>')>
+  <@if(v.skel_name eq 'copyright',   '<span class="select">著作権表示</span>',       #'<a href="<@v.myself>?<@v.skel_dir>copyright">著作権表示</a>')>
  <span class="item-end">]</span>
  </span>
 </nav>
