@@ -2,11 +2,14 @@
 
 *Ver3.0β5 : 2015/xx/xx
 
+-[http://adiary.org/ver2to3.html:Version2 からの移行機能]が付きました。
 -theme/ ディレクトリ以下にテーマやテンプレートに無関係なものが増えてきたので、それらを pub-dist/ に移動しました。
 -【記法】目次記法の機能を拡張し、出力階層を選択できるようにしました（{{[*toc0] [*toc2]}}の追加）。
 -【アルバム】【fix】大文字の拡張子（.JPG等）を画像ファイルと識別できない。
 -【fix】「ブログとwikiコンテンツ等を分離して扱う」にチェックを入れるとコンテンツページが検索にヒットしない。（[http://adiary.blog.abk.nu/0358#c655:Thanks to 手石]）
 -【fix】theme/以下のテンプレート読み込み機能がうまく動作していなかった。なおVer3の[bf:テンプレートディレクトリ名は _skel です]（[http://adiary.blog.abk.nu/0358#c655:Thanks to 手石]）
+-【fix】【Compiler】{{<@ifcall(cond, 'file')>}} 等で cond が false のとき、condの値が出力されてしまう。
+
 
 *Ver3.0β4 : 2015/03/05
 
